--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -24,23 +24,33 @@
             tools:layout_editor_absoluteX="1dp"
             tools:layout_editor_absoluteY="1dp">
 
-            <EditText
-                android:id="@+id/JogosMaisJogadosTextView"
+
+            <TextView
+                android:id="@+id/Table_Title_JogosMaisJogados"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_margin="10px"
-                android:ems="10"
-                android:inputType="text"
-                android:shadowColor="#FFFFFF"
+                android:layout_marginLeft="20px"
+                android:layout_marginTop="20px"
+                android:layout_marginRight="20px"
+                android:layout_marginBottom="10px"
                 android:text="Jogos Mais Jogados"
                 android:textColor="#FFFFFF"
-                android:textColorHighlight="#FFFFFF"
-                android:textColorHint="#FFFFFF"
-                android:textColorLink="#FF0000" />
+                android:textSize="16sp" />
+
+            <View
+                android:id="@+id/BarJogosMaisJogados"
+                android:layout_width="match_parent"
+                android:layout_height="2dp"
+                android:layout_marginLeft="20px"
+                android:layout_marginRight="20px"
+                android:layout_marginBottom="20px"
+                android:background="@color/Gray"
+                android:backgroundTint="#000000" />
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginBottom="10px"
                 android:orientation="horizontal">
 
                 <TextView
@@ -69,30 +79,44 @@
             <ListView
                 android:id="@+id/JogosMaisJogados_ListView"
                 android:layout_width="match_parent"
-                android:layout_height="280dp" />
+                android:layout_height="280dp"
+                android:layout_marginRight="20px" />
 
-            <EditText
-                android:id="@+id/JogosConcluidosTextView"
+            <TextView
+                android:id="@+id/Table_Title_JogosConcluidos"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_margin="10px"
-                android:ems="10"
-                android:inputType="text"
+                android:layout_marginLeft="20px"
+                android:layout_marginTop="20px"
+                android:layout_marginRight="20px"
+                android:layout_marginBottom="10px"
                 android:text="Jogos Concluídos"
                 android:textColor="#FFFFFF"
-                android:textColorLink="#FF0000" />
+                android:textSize="16sp" />
+
+            <View
+                android:id="@+id/Bar"
+                android:layout_width="match_parent"
+                android:layout_height="2dp"
+                android:layout_marginLeft="20px"
+                android:layout_marginRight="20px"
+                android:layout_marginBottom="20px"
+                android:background="@color/Gray"
+                android:backgroundTint="#000000" />
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="19dp"
+                android:layout_marginTop="10px"
+                android:layout_marginBottom="10px"
                 android:orientation="horizontal">
 
                 <TextView
                     android:id="@+id/JogosConcluidos_title_TextView"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
                     android:layout_marginStart="40px"
-                    android:layout_weight="1"
+                    android:layout_weight="2"
                     android:text="Jogo"
                     android:textColor="#FFFFFF" />
 
@@ -104,12 +128,14 @@
                     android:text="Conquistas"
                     android:textAlignment="textEnd"
                     android:textColor="#FFFFFF" />
+
             </LinearLayout>
 
             <ListView
                 android:id="@+id/JogosConcluídos_ListView"
                 android:layout_width="match_parent"
                 android:layout_height="280dp"
+                android:layout_marginRight="20px"
                 android:foregroundTint="#FFFFFF" />
 
         </LinearLayout>
