--- a/app/src/main/res/layout/activity_tela_detalhes_do_jogo.xml
+++ b/app/src/main/res/layout/activity_tela_detalhes_do_jogo.xml
@@ -26,11 +26,11 @@
                     android:id="@+id/layout_global_detalhes"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="2dp"
+                    android:layout_marginTop="40px"
                     android:orientation="vertical">
 
                     <TextView
-                        android:id="@+id/title_detalhe_jogo"
+                        android:id="@+id/title_jogo_detalhe"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="33dp"
