--- a/app/src/main/res/layout/fragment__tela_detalhes_do_jogo.xml
+++ b/app/src/main/res/layout/fragment__tela_detalhes_do_jogo.xml
@@ -131,48 +131,31 @@
                         </LinearLayout>
                     </LinearLayout>
 
-                    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                        xmlns:app="http://schemas.android.com/apk/res-auto"
-                        xmlns:tools="http://schemas.android.com/tools"
-                        android:id="@+id/btn_adicionar_favorito"
+                    <Button
+                        android:id="@+id/button_adicionar_fav"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginHorizontal="24dp"
-                        android:layout_marginBottom="17dp"
+                        android:layout_marginHorizontal="23dp"
+                        android:layout_marginBottom="26dp"
                         android:background="@drawable/ic_layout_btn_arredondado"
                         android:gravity="center_horizontal"
                         android:orientation="vertical"
-                        android:paddingVertical="20dp">
+                        android:paddingVertical="20dp"
+                        android:text="Adicionar aos favoritos"
+                        android:textColorLink="#000000" />
 
-                        <TextView
-                            android:id="@+id/txt_btn_fav"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="Adicionar aos favoritos"
-                            android:textColor="#FFFFFF"
-                            android:textSize="20sp" />
-                    </LinearLayout>
-
-                    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                        xmlns:app="http://schemas.android.com/apk/res-auto"
-                        xmlns:tools="http://schemas.android.com/tools"
-                        android:id="@+id/btn_atribuir_nota"
+                    <Button
+                        android:id="@+id/button_atribuir_nota"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginHorizontal="24dp"
+                        android:layout_marginHorizontal="23dp"
+                        android:layout_marginBottom="26dp"
                         android:background="@drawable/ic_layout_btn_arredondado"
                         android:gravity="center_horizontal"
                         android:orientation="vertical"
-                        android:paddingVertical="20dp">
-
-                        <TextView
-                            android:id="@+id/txt_btn_atribuir_nota"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="Atribuir Nota"
-                            android:textColor="#FFFFFF"
-                            android:textSize="20sp" />
-                    </LinearLayout>
+                        android:paddingVertical="20dp"
+                        android:text="Atribuir Nota"
+                        android:textColorLink="#000000" />
                 </LinearLayout>
             </LinearLayout>
         </ScrollView>
