--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -70,7 +70,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginEnd="20px"
                     android:layout_weight="1"
-                    android:text="Jogadores Online"
+                    android:text="Horas Jogadas"
                     android:textAlignment="viewEnd"
                     android:textColor="#FFFFFF" />
 
