--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -9,18 +9,19 @@
         android:id="@+id/nav_home"
         android:name="com.example.trab1_ddm.ui.home.HomeFragment"
         android:label="@string/menu_home"
+        android:enabled="true"
         tools:layout="@layout/fragment_home" />
 
-    <fragment
-        android:id="@+id/nav_gallery"
-        android:name="com.example.trab1_ddm.ui.gallery.GalleryFragment"
-        android:label="@string/menu_gallery"
-        tools:layout="@layout/fragment_gallery" />
 
     <fragment
         android:id="@+id/nav_library"
         android:name="com.example.trab1_ddm.ui.library.LibraryFragment"
         android:label="@string/menu_library"
         tools:layout="@layout/fragment_library" />
+
+    <fragment
+        android:id="@+id/fragment_container"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 
 </navigation>
