--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -12,5 +12,10 @@
             android:id="@+id/nav_library"
             android:icon="@drawable/ic_menu_library"
             android:title="@string/menu_library" />
+        <item
+            android:id="@+id/nav_settings"
+            android:orderInCategory="100"
+            android:title="@string/action_settings" />
+
     </group>
 </menu>
