--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -22,7 +22,7 @@
     <fragment
         android:id="@+id/nav_settings"
         android:name="com.example.trab1_ddm.ui.settings.SettingsFragment"
-        android:label="@string/menu_gallery"
+        android:label="@string/menu_settings"
         tools:layout="@layout/fragment_library"/>
 
 </navigation>
