--- a/app/src/main/res/layout/fragment_tela_configuracoes.xml
+++ b/app/src/main/res/layout/fragment_tela_configuracoes.xml
@@ -22,6 +22,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:layout_marginTop="100dp"
                 android:orientation="vertical">
 
 
@@ -44,8 +45,7 @@
                     android:layout_marginBottom="26dp"
                     android:orientation="vertical"
                     android:paddingVertical="20dp"
-                    android:text="Alterar Apelido"
-                     />
+                    android:text="Alterar Apelido" />
 
                 <Button
                     android:id="@+id/button_vincular_steam"
@@ -66,7 +66,7 @@
                     android:padding="13dp"
                     android:paddingVertical="20dp"
                     android:text="Sair da Conta"
-                    android:textAlignment="center"/>
+                    android:textAlignment="center" />
 
             </LinearLayout>
         </ScrollView>
