--- a/app/src/main/res/layout/fragment__tela_detalhes_do_jogo.xml
+++ b/app/src/main/res/layout/fragment__tela_detalhes_do_jogo.xml
@@ -48,22 +48,28 @@
                         android:background="#000000"
                         android:orientation="vertical"></LinearLayout>
 
-                    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                        xmlns:app="http://schemas.android.com/apk/res-auto"
-                        xmlns:tools="http://schemas.android.com/tools"
+                    <LinearLayout
                         android:id="@+id/layout_img_detalhe_jogo"
                         android:layout_width="match_parent"
                         android:layout_height="206dp"
                         android:layout_marginHorizontal="11dp"
-                        android:layout_marginBottom="33dp"
                         android:background="@drawable/ic_launcher_imgdetalhejogo"
-                        android:orientation="vertical"></LinearLayout>
+                        android:orientation="vertical">
+
+                        <ImageView
+                            android:id="@+id/img_porc_concluido"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:scaleType="fitXY"
+                            android:src="@mipmap/ic_launcher" />
+                    </LinearLayout>
 
                     <LinearLayout
                         android:id="@+id/layout_conquistas"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginHorizontal="11dp"
+                        android:layout_marginTop="30dp"
                         android:layout_marginBottom="22dp"
                         android:background="@drawable/ic_launcher_detalhe_conquistas"
                         android:orientation="vertical"
@@ -111,21 +117,15 @@
                                     android:textSize="15sp" />
                             </LinearLayout>
 
-                            <ImageView
-                                android:id="@+id/img_porc_concluido"
-                                android:layout_width="92dp"
-                                android:layout_height="109dp"
-                                android:layout_marginEnd="12dp"
-                                android:scaleType="fitXY"
-                                android:src="@mipmap/ic_launcher" />
-
                             <TextView
                                 android:id="@+id/txt_disponivel"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
+                                android:layout_marginLeft="120dp"
                                 android:layout_marginTop="35dp"
                                 android:layout_weight="1"
                                 android:text="1\nDisponível"
+                                android:textAlignment="textStart"
                                 android:textColor="#FFFFFF"
                                 android:textSize="15sp" />
 
@@ -138,25 +138,11 @@
                         android:layout_height="wrap_content"
                         android:layout_marginHorizontal="23dp"
                         android:layout_marginBottom="26dp"
-                        android:background="@drawable/ic_layout_btn_arredondado"
-                        android:gravity="center_horizontal"
+                        android:backgroundTintMode="add"
                         android:orientation="vertical"
                         android:paddingVertical="20dp"
-                        android:text="Adicionar aos favoritos"
-                        android:textColorLink="#000000" />
+                        android:text="Adicionar aos favoritos" />
 
-                    <Button
-                        android:id="@+id/button_atribuir_nota"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginHorizontal="23dp"
-                        android:layout_marginBottom="26dp"
-                        android:background="@drawable/ic_layout_btn_arredondado"
-                        android:gravity="center_horizontal"
-                        android:orientation="vertical"
-                        android:paddingVertical="20dp"
-                        android:text="Atribuir Nota"
-                        android:textColorLink="#000000" />
                 </LinearLayout>
             </LinearLayout>
         </ScrollView>
