--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -13,11 +13,22 @@
         tools:layout="@layout/fragment_home" />
 
 
-    <fragment
-        android:id="@+id/nav_library"
-        android:name="com.example.trab1_ddm.ui.library.LibraryFragment"
-        android:label="@string/menu_library"
-        tools:layout="@layout/fragment_library" />
+        <fragment
+            android:id="@+id/nav_library"
+            android:name="LibraryFragment"
+            android:label="@string/menu_library"
+            tools:layout="@layout/fragment_library" >
+            <action
+                android:id="@+id/action_libraryFragment_to_gameDetailsFragment"
+                app:destination="@id/gameDetailsFragment" />
+        </fragment>
+
+
+<fragment
+android:id="@+id/gameDetailsFragment"
+android:name="GameDetailsFragment"
+tools:layout="@layout/fragment__tela_detalhes_do_jogo" />
+
 
     <fragment
         android:id="@+id/nav_settings"
