--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -26,6 +26,43 @@
 
 
             <TextView
+                android:id="@+id/id_ranking"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="20px"
+                android:layout_marginTop="20px"
+                android:layout_marginRight="20px"
+                android:layout_marginBottom="10px"
+                android:text="Ranking"
+                android:textColor="#FFFFFF"
+                android:textSize="16sp"/>
+
+            <View
+                android:id="@+id/Bar_Ranking"
+                android:layout_width="match_parent"
+                android:layout_height="2dp"
+                android:layout_marginLeft="20px"
+                android:layout_marginRight="20px"
+                android:layout_marginBottom="20px"
+                android:background="@color/Gray"
+                android:backgroundTint="#000000" />
+            <TextView
+                android:id="@+id/Ranking_title_TextView"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_marginStart="40px"
+                android:layout_weight="1"
+                android:autoText="false"
+                android:text="Jogador"
+                android:textAlignment="viewStart"
+                android:textColor="#FFFFFF" />
+            <ListView
+                android:id="@+id/Ranking_ListView"
+                android:layout_width="match_parent"
+                android:layout_height="280dp"
+                android:layout_marginRight="20px" />
+
+            <TextView
                 android:id="@+id/Table_Title_JogosMaisJogados"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -62,16 +99,6 @@
                     android:autoText="false"
                     android:text="Jogo"
                     android:textAlignment="viewStart"
-                    android:textColor="#FFFFFF" />
-
-                <TextView
-                    android:id="@+id/JogosMaisJogados_jogadoresOn_TextView"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginEnd="20px"
-                    android:layout_weight="1"
-                    android:text="Horas Jogadas"
-                    android:textAlignment="viewEnd"
                     android:textColor="#FFFFFF" />
 
             </LinearLayout>
@@ -118,15 +145,6 @@
                     android:layout_marginStart="40px"
                     android:layout_weight="2"
                     android:text="Jogo"
-                    android:textColor="#FFFFFF" />
-
-                <TextView
-                    android:id="@+id/JogosConcluidos_consquistas_TextView"
-                    android:layout_width="233dp"
-                    android:layout_height="wrap_content"
-                    android:layout_marginEnd="20px"
-                    android:text="Conquistas"
-                    android:textAlignment="textEnd"
                     android:textColor="#FFFFFF" />
 
             </LinearLayout>
