--- a/app/src/main/res/layout/activity_tela_de_cadastro.xml
+++ b/app/src/main/res/layout/activity_tela_de_cadastro.xml
@@ -7,6 +7,7 @@
     android:backgroundTint="@color/Gray"
     android:orientation="vertical">
 
+
     <ScrollView
         android:id="@+id/registerView"
         android:layout_width="match_parent"
@@ -53,7 +54,7 @@
                     android:layout_width="358dp"
                     android:layout_height="wrap_content"
                     android:background="@color/Gray"
-                    android:hint="hint"
+                    android:hint="Seu Nome"
                     android:textColor="#FFFFFF"
                     android:textSize="16sp" />
 
@@ -80,7 +81,7 @@
                     android:layout_width="358dp"
                     android:layout_height="wrap_content"
                     android:background="@color/Gray"
-                    android:hint="hint"
+                    android:hint="Sua Senha"
                     android:textColor="#FFFFFF"
                     android:textSize="16sp" />
 
@@ -108,7 +109,7 @@
                     android:layout_width="358dp"
                     android:layout_height="wrap_content"
                     android:background="@color/Gray"
-                    android:hint="hint"
+                    android:hint="Seu Apelido"
                     android:textColor="#FFFFFF"
                     android:textSize="16sp" />
 
