--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -16,6 +16,10 @@
             android:id="@+id/nav_settings"
             android:orderInCategory="100"
             android:title="@string/action_settings" />
+        <item
+            android:id="@+id/cadastro"
+            android:orderInCategory="100"
+            android:title="@string/tela_cadastro" />
 
     </group>
 </menu>
