--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -20,6 +20,10 @@
             android:id="@+id/cadastro"
             android:orderInCategory="100"
             android:title="@string/tela_cadastro" />
+        <item
+            android:id="@+id/login"
+            android:orderInCategory="100"
+            android:title="@string/tela_login" />
 
     </group>
 </menu>
