--- a/app/src/main/res/layout/activity_tela_de_login.xml
+++ b/app/src/main/res/layout/activity_tela_de_login.xml
@@ -98,10 +98,20 @@
                 android:layout_marginTop="50dp"
                 android:orientation="vertical">
 
+                <Button
+                    android:id="@+id/buttonLogin"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="50dp"
+                    android:layout_marginRight="50dp"
+                    android:drawableBottom="@drawable/ic_launcher_btn_config_arredondado"
+                    android:text="Login" />
+
                 <TextView
                     android:id="@+id/auxCadastreText"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_marginTop="80dp"
                     android:layout_marginBottom="10dp"
                     android:paddingLeft="50dp"
                     android:paddingRight="50dp"
@@ -119,14 +129,6 @@
                     android:layout_marginBottom="30dp"
                     android:drawableBottom="@drawable/ic_launcher_btn_config_arredondado"
                     android:text="Cadastre-se" />
-                <Button
-                    android:id="@+id/buttonLogin"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="50dp"
-                    android:layout_marginRight="50dp"
-                    android:drawableBottom="@drawable/ic_launcher_btn_config_arredondado"
-                    android:text="Login" />
             </LinearLayout>
 
         </LinearLayout>
