--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -24,6 +24,10 @@
             android:id="@+id/login"
             android:orderInCategory="100"
             android:title="@string/tela_login" />
+        <item
+            android:id="@+id/camera"
+            android:orderInCategory="100"
+            android:title="@string/tela_camera" />
 
     </group>
 </menu>
