--- a/app/src/main/res/layout/fragment__tela_detalhes_do_jogo.xml
+++ b/app/src/main/res/layout/fragment__tela_detalhes_do_jogo.xml
@@ -60,8 +60,7 @@
                             android:id="@+id/img_porc_concluido"
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
-                            android:scaleType="fitXY"
-                            android:src="@mipmap/ic_launcher" />
+                            android:scaleType="fitCenter" />
                     </LinearLayout>
 
                     <LinearLayout
